SERVER-65473 stop underflow assert in global memory tracker